core/roboconf-core/src/test/resources/configurations/invalid/duplicate-component.graph
component A {
	installer: whatever;
}

component B {
	installer: B;
}

component A {
	installer: whatever;
}
